--- a/React/ReactHookFormYup/package.json
+++ b/React/ReactHookFormYup/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restaurant_site_react",
+  "name": "reacthookformyup",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,24 +11,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "axios": "^1.12.2",
-    "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
-    "react-router-dom": "^7.9.3",
-    "reactstrap": "^9.2.3",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/react": "^19.1.13",
+    "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
